--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-<?php echo '<p>Hello World</p>'; ?> 
+ <!DOCTYPE html>
+<html>
+	<head>
+		<title>Joe Skimmons</title>
+	<head>
+
+<body>
+
+<h1>Coming Soon!</h1>
+<p>This page will blow your minds! Coming Spring of 2017</p>
+
+</body>
+</html>
